Refactored main classes, added tests