@@ -12,36 +12,68 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 
+/**
+ * Service responsible for validating image files for supported formats
+ * and checking for non-empty content.
+ */
 @Service
 public class ImageFormatValidator {
-    private final List<String> validFormats = Arrays.asList("JPEG", "PNG", "GIF");
+    private static final List<String> VALID_FORMATS = List.of("jpeg", "png", "gif");
 
-    private String recognizeFormat(MultipartFile file) {
-        try {
-            ByteArrayInputStream bis = new ByteArrayInputStream(file.getBytes());
-            BufferedImage image = ImageIO.read(bis);
-            return getImageFormat(image);
-        } catch (IOException | EmptyImageException | InvalidImageFormatException e) {
-            e.printStackTrace();
-        }
-        return "unknown image";
-    }
-
-    private String getImageFormat(BufferedImage image) throws EmptyImageException, InvalidImageFormatException {
-        if (image == null) {
+    /**
+     * Validates whether the uploaded image is non-empty and has a supported format.
+     *
+     * @param file the uploaded image file
+     * @return true if the image is valid
+     * @throws InvalidImageFormatException if the image format is not supported
+     * @throws EmptyImageException if the file is empty or cannot be read as an image
+     */
+    public boolean isValidImage(MultipartFile file) throws InvalidImageFormatException, EmptyImageException {
+        if (file.isEmpty()) {
             throw new EmptyImageException();
         }
-        String formatName = ImageIO.getImageReadersByMIMEType("image/jpeg").next().getOriginatingProvider().getFormatNames()[0];
 
-        if (!formatName.equals("JPEG") && !formatName.equals("PNG") && !formatName.equals("GIF")) {
-            throw new InvalidImageFormatException(formatName);
+        String format = detectFormat(file);
+        if (!VALID_FORMATS.contains(format.toLowerCase())) {
+            throw new InvalidImageFormatException(format);
         }
-        return formatName;
+
+        return true;
     }
 
-    public boolean isValidImage(MultipartFile file) {
-        return validFormats.contains(recognizeFormat(file).toUpperCase());
+    /**
+     * Attempts to detect the image format by reading the file contents
+     * and checking the file extension.
+     *
+     * @param file the uploaded image file
+     * @return the image format (e.g. "jpeg", "png")
+     * @throws EmptyImageException if the image cannot be read or is empty
+     */
+    private String detectFormat(MultipartFile file) throws EmptyImageException {
+        try (ByteArrayInputStream bis = new ByteArrayInputStream(file.getBytes())) {
+            BufferedImage image = ImageIO.read(bis);
+            if (image == null) {
+                throw new EmptyImageException();
+            }
+
+            String formatName = guessFormatName(file.getOriginalFilename());
+            return formatName != null ? formatName : "unknown";
+
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to read image", e);
+        }
+    }
+
+    /**
+     * Extracts the file extension from the file name.
+     *
+     * @param fileName the name of the uploaded file
+     * @return the format string (e.g. "png"), or null if not detected
+     */
+    private String guessFormatName(String fileName) {
+        if (fileName == null || !fileName.contains(".")) {
+            return null;
+        }
+        return fileName.substring(fileName.lastIndexOf('.') + 1);
     }
 }
-
-
